--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 <meta name="viewport" content="width=device-width">
 <title>Web Components</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="textarea.css">
+<link rel="stylesheet" href="library/textarea.css">
+<link rel="stylesheet" href="library/button.css">
 </head>
 <body>
 <section id="app">
   <div class="wrap">
 
     <textarea- contenteditable="true"></textarea->
+    <button- _text="Button"></button->
 
   </div>
 </section>
-<script src="textarea.js"></script>
+<script src="library/textarea.js"></script>
+<script src="library/button.js"></script>
 </body>
 </html>
