--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <section id="app">
   <div class="wrap">
 
-    <textarea- contenteditable="true"></textarea->
+    <textarea-default></textarea-default>
+    <textarea-extended></textarea-extended>
+
     <button- _text="Button"></button->
 
   </div>
