--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 <link rel="stylesheet" href="library/button.css">
 </head>
 <body>
-<section id="app">
-  <div class="wrap">
+<div id="app">
 
-    <textarea-default></textarea-default>
+  <textarea-default></textarea-default>
 
-  </div>
-</section>
+</div>
 <script src="library/textarea.js"></script>
 <script src="library/button.js"></script>
 </body>
