--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div id="app">
 
-  <textarea-default></textarea-default>
+  <textarea-element></textarea-element>
 
 </div>
 <script src="library/textarea.js"></script>
