--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div id="app">
 
-  <textarea-element></textarea-element>
+  <text-input></text-input>
 
 </div>
 <script src="library/textarea.js"></script>
