--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 <div id="app">
 
-  <text-input></text-input>
+  <div id="appWrap">
+    <input-text></input-text>
+  </div>
 
 </div>
 <script src="library/textarea.js"></script>
