--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
 <link rel="icon" href="data:,">
 <meta name="viewport" content="width=device-width">
 <title>Web Components</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="library/textarea.css">
-<link rel="stylesheet" href="library/button.css">
+<link rel="stylesheet" href="theme.css">
 </head>
 <body>
 <div id="app">
 
-  <div id="appWrap">
+  <div id="content">
     <input-text></input-text>
   </div>
 
 </div>
-<script src="library/textarea.js"></script>
+<script src="library/input-text.js"></script>
 <script src="library/button.js"></script>
 </body>
 </html>
