--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="app">
 
   <div id="content">
-    <input-text></input-text>
+    <input-text height="42px"></input-text>
   </div>
 
 </div>
