--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <body>
 <div id="app">
 
-  <div id="content">
-    <input-text height="42px"></input-text>
-  </div>
+  <div id="content"></div>
 
 </div>
 <script src="library/input-text.js"></script>
 <script src="library/button.js"></script>
+<script src="theme.js"></script>
 </body>
 </html>
