--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 <div id="app">
 
-  <div id="content"></div>
+  <div id="content">
+    <input-text type="text" required="true"></input-text>
+  </div>
 
 </div>
 <script src="library/input-text.js"></script>
