--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
   <div id="content">
     <input-text type="text" required="true"></input-text>
+    <div class="helper">
+      Default type: text<br>
+      Usage: type="text"<br>
+    </div>
   </div>
 
 </div>
