--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 <div id="app">
 
   <div id="content">
-    <input-text type="text" required="true"></input-text>
-    <div class="helper">
-      Default type: text<br>
-      Usage: type="text"<br>
-    </div>
+    <input-text></input-text>
   </div>
 
 </div>
