--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <div id="app">
 
   <div id="content">
-    <input-text required></input-text>
+    <text-input required></text-input>
   </div>
 
 </div>
-<script src="library/input-text.js"></script>
+<script src="library/text-input.js"></script>
 <script src="library/button.js"></script>
 <script src="theme.js"></script>
 </body>
