--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="app">
 
   <div id="content">
-    <text-input required></text-input>
+    <input-text required></input-text>
   </div>
 
 </div>
