--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
 </div>
-<script src="library/text-input.js"></script>
+<script src="library/input-text.js"></script>
 <script src="library/button.js"></script>
 <script src="theme.js"></script>
 </body>
