--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 <link rel="stylesheet" href="theme.css">
 </head>
 <body>
+<script src="svg-icons.js"></script>
 <div id="app">
 
   <div id="content">
     <input-text required></input-text>
   </div>
+
+
+<div class="hint"></div>
+<div class="label"></div>
 
 </div>
 <script src="library/input-text.js"></script>
