--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 <link rel="stylesheet" href="theme.css">
 </head>
 <body>
-<script src="svg-icons.js"></script>
+
 <div id="app">
-
   <div id="content">
-    <input-text required></input-text>
+    <icon-block name="iconHome"></icon-block>
+    <section>
+      <input-text required></input-text>
+    </section>
   </div>
-
 </div>
+
 <script src="library/input-text.js"></script>
-<script src="library/button.js"></script>
-<script src="theme.js"></script>
+<script type="module" src="library/icon-block.js"></script>
 </body>
 </html>
