--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div id="app">
   <div id="content">
-    <icon-block name="iconHome"></icon-block>
+    <icon-block icon="iconHome"></icon-block>
     <section>
       <input-text required></input-text>
     </section>
