--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <div id="app">
   <div id="content">
-    <icon-block icon="iconHome"></icon-block>
     <section>
+      <icon-block icon="iconSearch"></icon-block>
       <input-text required></input-text>
+      <input-text icon-before="iconSearch" icon-after="iconSearch" required></input-text>
     </section>
   </div>
 </div>
