--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="app">
   <div id="content">
     <section>
-      <icon-block icon="iconSearch"></icon-block>
+      <icon-block name="iconSearch1"></icon-block>
       <input-text required></input-text>
       <input-text icon-before="iconSearch" icon-after="iconSearch" required></input-text>
     </section>
