--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@
 <div id="app">
   <div id="content">
     <section>
-      <icon-block name="iconSearch1"></icon-block>
+      <icon-block name="iconSearch" width="30px"></icon-block>
       <input-text required></input-text>
-      <input-text icon-before="iconSearch" icon-after="iconSearch" required></input-text>
+      <button onclick="changeIconName()">Клик</button>
+
+      <script>
+        function changeIconName(){
+          const iconBlock = document.querySelector('icon-block');
+          const currentIcon = iconBlock.getAttribute('name');
+          const icons = ['iconSearch', 'iconHome', 'iconSettings'];
+          const currentIndex = icons.indexOf(currentIcon);
+          const nextIndex = (currentIndex + 1) % icons.length;
+          const nextIcon = icons[nextIndex];
+          iconBlock.setAttribute('name', nextIcon);
+        }
+      </script>
+
     </section>
   </div>
 </div>
 
 <script src="library/input-text.js"></script>
-<script type="module" src="library/icon-block.js"></script>
+<script type="module" src="library/icon-block-lit.js"></script>
 </body>
 </html>
