--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <div id="app">
   <div id="content">
     <section>
-      <icon-block name="iconHome" width="24px"></icon-block>
-      <icon-block name="iconSearch" width="24px"></icon-block>
-      <icon-block name="iconGear" width="24px"></icon-block> 
-      <icon-block name="iconSend" width="24px"></icon-block>
+      <icon-block name="iconHome"></icon-block>
+      <icon-block name="iconSearch"></icon-block>
+      <icon-block name="iconGear"></icon-block> 
+      <icon-block name="iconSend"></icon-block>
      <input-text required></input-text>
       <button onclick="changeIconName()">Клик</button>
 
