--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <section>
       <icon-block name="iconHome"></icon-block>
       <icon-block name="iconSearch"></icon-block>
-      <icon-block name="iconGear"></icon-block> 
       <icon-block name="iconSend"></icon-block>
+      <icon-block name="iconBell"></icon-block> 
+      <icon-block name="iconGear"></icon-block> 
      <input-text required></input-text>
       <button onclick="changeIconName()">Клик</button>
 
