--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <icon-block name="iconHome"></icon-block>
       <icon-block name="iconSearch"></icon-block>
       <icon-block name="iconSend"></icon-block>
-      <icon-block name="iconBell"></icon-block> 
-      <icon-block name="iconGear"></icon-block> 
+      <icon-block name="iconBell"></icon-block>
+      <icon-block name="iconGear"></icon-block>
+      <icon-block name="iconCross"></icon-block>
+      <icon-block name="iconInputClear"></icon-block> 
      <input-text required></input-text>
       <button onclick="changeIconName()">Клик</button>
 
