--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 </div>
 
 <script src="library/input-text.js"></script>
-<script type="module" src="library/icon-block-lit.js"></script>
+<script type="module" src="library/icon-block-native.js"></script>
 </body>
 </html>
