--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <icon-block name="iconGear"></icon-block>
       <icon-block name="iconCross"></icon-block>
       <icon-block name="iconInputClear"></icon-block> 
+    </section>
+
       <input-text required></input-text>
       <button onclick="changeIconName()">Клик</button>
 
