--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
   </div>
 </div>
-<script type="module" src="helpers/lit-all.min-v3.2.1.js"></script>
-<script type="module" src="library/icon-block-lit.js"></script>
+<script type="module" src="library/icon-block.js"></script>
 </body>
 </html>
