--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="app">
   <div id="content">
     <section>
-      <icon-block name="iconHome"></icon-block>
+      <icon-block name="iconHome1" width="20px" height="44px"></icon-block>
       <icon-block name="iconSearch"></icon-block>
       <icon-block name="iconSend"></icon-block>
       <icon-block name="iconBell"></icon-block>
