--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
           <thead>
             <tr>
               <td>Атрибут</td>
-              <td>Состояние</td>
-              <td>Доп. инфа</td>
+              <td>Тип</td>
+              <td>Информация</td>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>name</td>
               <td>Реактивный</td>
-              <td>Латиница и цифры, a-z A-Z 0-9</td>
+              <td>Латиница и цифры, начало с буквы. a-z A-Z 0-9</td>
             </tr>
             <tr>
               <td>width</td>
               <td>Реактивный</td>
-              <td>Целое или дробное и px | %</td>
+              <td>Целое или дробное число и px | %</td>
             </tr>
             <tr>
               <td>height</td>
               <td>Реактивный</td>
-              <td>Целое или дробное и px | %</td>
+              <td>Целое или дробное число и px | %</td>
             </tr>
             <tr>
               <td>color</td>
@@ -75,6 +75,12 @@
             </tr>
           </tbody>
         </table>
+      </div>
+      <div class="example">
+        <div class="text">Пример</div>
+        <div class="code">
+          <code>&lt;icon-block name="iconName24" width="24px" height="50%" color="--theme-dark"&gt;&lt;/icon-block&gt;</code>
+        </div>
       </div>
     </section>
 
