--- a/pages/icon-props.html
+++ b/pages/icon-props.html
@@ -6,7 +6,8 @@
         <tr>
           <td>Атрибут</td>
           <td>Тип</td>
-          <td>Обязательный</td>
+          <td>Статус</td>
+          <td>По умолчанию</td>
           <td>Информация</td>
         </tr>
       </thead>
@@ -14,25 +15,29 @@
         <tr>
           <td>name</td>
           <td>Реактивный</td>
-          <td>Да</td>
+          <td>Обяз.</td>
+          <td>-</td>
           <td>Латиница и цифры, начало с буквы. a-z A-Z 0-9</td>
         </tr>
         <tr>
           <td>width</td>
           <td>Реактивный</td>
-          <td>Нет</td>
+          <td>Не обяз.</td>
+          <td>20px</td>
           <td>Целое или дробное число и px | %</td>
         </tr>
         <tr>
           <td>height</td>
           <td>Реактивный</td>
-          <td>Нет</td>
+          <td>Не обяз.</td>
+          <td>20px</td>
           <td>Целое или дробное число и px | %</td>
         </tr>
         <tr>
           <td>color</td>
           <td>Реактивный</td>
-          <td>Нет</td>
+          <td>Не обяз.</td>
+          <td>rgb(255,255,255)</td>
           <td>CSS переменная --theme-dark</td>
         </tr>
       </tbody>
