--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
 
 <div id="app">
-  <div id="menu">
-    <a onclick="loadContent('pages/icons-pack.html')">Icons Pack</a>
-    <a onclick="loadContent('pages/icon-props.html')">Icon Props</a>
+  <div class="menu">
+    <div class="menuItem">
+      <a onclick="loadContent('pages/icons-pack.html')">Icons Pack</a>
+    </div>
+    <div class="menuItem">
+      <a onclick="loadContent('pages/icon-props.html')">Icon Props</a>
+    </div>
   </div>
   <div id="body"></div>
 </div>
