--- a/pages/icon-props.html
+++ b/pages/icon-props.html
@@ -4,10 +4,10 @@
     <table>
       <thead>
         <tr>
-          <td>Атрибут</td>
-          <td>Тип</td>
-          <td>Статус</td>
-          <td>По умолчанию</td>
+          <td style="width:100px;min-width:100px;">Атрибут</td>
+          <td style="width:120px;min-width:120px;">Тип</td>
+          <td style="width:120px;min-width:120px;">Статус</td>
+          <td style="width:120px;min-width:120px;">По умолчанию</td>
           <td>Информация</td>
         </tr>
       </thead>
