--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <meta charset="utf-8">
 <link rel="icon" href="data:,">
@@ -10,14 +10,23 @@
 <body>
 
 <div id="app">
-  <div class="menu">
-    <div class="menuItem">
-      <a onclick="loadContent('pages/icons-pack.html')">Icons Pack</a>
+
+  <div class="nav">
+    <div class="static"></div>
+    <div class="dynamic">
+      <div class="menuItem">
+        <span>Иконки</span>
+      </div>
+      <div class="menuItem">
+        <span onclick="loadContent('pages/icons-pack.html')">Каталог</span>
+      </div>
+      <div class="menuItem">
+        <span onclick="loadContent('pages/icon-props.html')">Свойства</span>
+      </div>
     </div>
-    <div class="menuItem">
-      <a onclick="loadContent('pages/icon-props.html')">Icon Props</a>
-    </div>
+    <div class="static"></div>
   </div>
+
   <div id="body"></div>
 </div>
 
