--- a/pages/icons-pack.html
+++ b/pages/icons-pack.html
@@ -1,5 +1,5 @@
 <section class="section" id="iconsPack">
-  <div class="title">Набор иконок</div>
+  <div class="title">Каталог</div>
   <div class="help">20 x 20</div>
   <div class="content">
     <div>
