--- a/pages/icon-props.html
+++ b/pages/icon-props.html
@@ -1,4 +1,4 @@
-<section class="section" id="iconProps">
+<section class="section properties">
   <div class="title">Свойства</div>
   <div class="content">
     <table>
@@ -39,7 +39,7 @@
           <td>rgb(255,255,255)</td>
           <td>
             Тип: реактивный, не обязательный<br/>
-            CSS переменная --theme-dark
+            CSS переменная --svg-color
           </td>
         </tr>
       </tbody>
@@ -47,10 +47,10 @@
   </div>
 </section>
 <section class="section example">
-  <div class="help">Минимальный вид</div>
+  <div class="help">Минимальный вариант</div>
   <code>&lt;icon-block name="iconName"&gt;&lt;/icon-block&gt;</code>
 </section>
 <section class="section example">
   <div class="help">Все атрибуты</div>
-  <code>&lt;icon-block name="iconName" width="24px" height="50%" color="--theme-dark"&gt;&lt;/icon-block&gt;</code>
+  <code>&lt;icon-block name="iconName" width="24px" height="50%" color="--svg-color"&gt;&lt;/icon-block&gt;</code>
 </section>
