--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
     <div class="static"></div>
     <div class="dynamic">
       <div class="menuItem">
-        <span>Иконки</span>
+        <span onclick="loadContent('pages/icons-pack.html')">Иконки Каталог</span>
       </div>
       <div class="menuItem">
-        <span onclick="loadContent('pages/icons-pack.html')">Каталог</span>
-      </div>
-      <div class="menuItem">
-        <span onclick="loadContent('pages/icon-props.html')">Свойства</span>
+        <span onclick="loadContent('pages/icon-props.html')">Иконки Свойства</span>
       </div>
     </div>
     <div class="static"></div>
