--- a/pages/icon-props.html
+++ b/pages/icon-props.html
@@ -1,5 +1,5 @@
-<section class="section properties">
-  <div class="title">Свойства</div>
+<div class="title">Свойства иконки</div>
+<section class="section props">
   <div class="content">
     <table>
       <thead>
