--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
         </span>
       </div>
       <div class="menuItem">
-        <span onclick="loadContent('pages/icon-props.html')">
+        <span onclick="loadContent('pages/icon-block.html')">
           <icon-block name="article20"></icon-block>
-          Свойства иконки
+          Иконка
+        </span>
+      </div>
+      <div class="menuItem">
+        <span onclick="loadContent('pages/text-block.html')">
+          <icon-block name="article20"></icon-block>
+          Текст
+        </span>
+      </div>
+      <div class="menuItem">
+        <span onclick="loadContent('pages/button-block.html')">
+          <icon-block name="article20"></icon-block>
+          Кнопка
         </span>
       </div>
     </div>
@@ -55,7 +67,7 @@ function loadContent(page){
 </script>
 
 <script type="module" src="library/icon-block.js"></script>
-<script type="module" src="library/button-block.js"></script>
 <script type="module" src="library/text-block.js"></script>
+<script type="module" src="library/button-block.js"></script>
 </body>
 </html>
