--- a/pages/text-block.html
+++ b/pages/text-block.html
@@ -1,4 +1,4 @@
-<div class="title">Свойства иконки</div>
+<text-block style="font-size:200%;">Текст</text-block>
 <section class="section props">
   <div class="content">
     <table>
@@ -20,18 +20,18 @@
         </tr>
         <tr>
           <td>width</td>
-          <td>20px</td>
+          <td>20</td>
           <td>
             Тип: реактивный, не обязательный<br/>
-            Целое или дробное число, заканчивается на px или %
+            Целое или дробное число, значение в px
           </td>
         </tr>
         <tr>
           <td>height</td>
-          <td>20px</td>
+          <td>20</td>
           <td>
             Тип: реактивный, не обязательный<br/>
-            Целое или дробное число, заканчивается на px или %
+            Целое или дробное число, значение в px
           </td>
         </tr>
         <tr>
@@ -48,9 +48,9 @@
 </section>
 <section class="section example">
   <div class="help">Минимальный вариант</div>
-  <code>&lt;icon-block name="iconName"&gt;&lt;/icon-block&gt;</code>
+  <code>&lt;text-block&gt;Текст&lt;/text-block&gt;</code>
 </section>
 <section class="section example">
   <div class="help">Все атрибуты</div>
-  <code>&lt;icon-block name="iconName" width="24px" height="50%" color="--svg-color"&gt;&lt;/icon-block&gt;</code>
+  <code>&lt;text-block name="iconName" width="24" height="24" color="--svg-color"&gt;Текст&lt;/text-block&gt;</code>
 </section>
